Container fix and spacing adjustment

--- a/less/home.less
+++ b/less/home.less
@@ -9,7 +9,7 @@
 }
 .section-1-btn {
     a {
-        margin: 50px 0;
+        margin-top: 100px;
         @media @mobile{
             margin-bottom: 80px;
             width: 90%;
