--- a/less/index.less
+++ b/less/index.less
@@ -4,7 +4,9 @@
 @import "palette.less";
 @import "home.less";
 @import "about.less";
-
+section,footer {
+    margin: 100px auto 0 !important;
+}
 .btn:hover , .btn-large:hover {
     filter: brightness(110%);
 }
